# seekcode

./: MCP_SERVER.md  README.md  index.html  package.json  pnpm-lock.yaml  project.md  tailwind.config.js  test_mcp.py
.github/workflows/: publish-to-auto-release.yml
src/: App.vue  main.ts  style.css  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs  mcp_server.rs  models.rs  snippet_service.rs
src/components/: AboutPage.vue  ClipboardHistory.vue  ClipboardMainContent.vue  CodeEditor.vue  CodeSnippetList.vue  DataManagement.vue  GeneralSettings.vue  McpServer.vue  PluginSettings.vue  SettingsModal.vue  SnippetMainContent.vue  ThemeSettings.vue  Toast.vue  UpdateDialog.vue
src/composables/: useAppUpdater.ts  useAppearanceSettings.ts  useClipboard.ts  useClipboardSettings.ts  useGeneralSettings.ts  useLanguage.ts  useSettingsDatabase.ts  useSettingsModal.ts  useSnippets.ts  useToast.ts  useUserSettings.ts
src/i18n/: index.ts
src/i18n/locales/: en-US.ts  zh-CN.ts
src/services/: tauri.ts
src/types/: index.ts
src/utils/: clipboard.ts  language.ts  time.ts
